[gd_scene load_steps=2 format=3 uid="uid://btu4sqmpkdh3v"]

[ext_resource type="Script" path="res://Content/Scenes/Player Character/Scripts/dash.gd" id="1_yoque"]

[node name="Dash" type="Node2D"]
script = ExtResource("1_yoque")

[node name="DashDuration" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DashDuration" to="." method="_on_dash_duration_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
